--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,17 @@ button:active {
   color: #ee5a6f;
 }
 
+.clickable-icon {
+  color: #3ad49c;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.clickable-icon:hover {
+  
+  transform: scale(1.2);
+}
+
 li {
   list-style: none;
 }
@@ -567,13 +578,10 @@ p {
 .gradient-card {
   border-radius: 5px;
   box-shadow: 20;
-  min-width: 200px;
-  max-width: 200px;
   padding: 10px;
   padding-top: 30px;
   height: 100%;
-  background-image: linear-gradient(to bottom, #ee5a6f, #f29263);
-  z-index: 1;
+  background-image: linear-gradient(to right, #252525, #3b3b3b);
 }
 
 .profile-container {
@@ -711,6 +719,7 @@ p {
 
   .bold-300 {
     font-size: 30px;
+    height: 30px;
   }
 
   .icon-size-sm {
@@ -857,6 +866,7 @@ p {
 
   .bold-300 {
     font-size: 20px;
+    height: 20px;
   }
 
   .icon-size-sm {
@@ -943,7 +953,7 @@ p {
 
   .content-inner {
     width: 100%;
-    height: 100%;
+  
     padding: 10px;
     margin-top: 0px;
    
