Fingerprint and Profile Picture upload Feature added

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,8 +8,15 @@
 
 .profile-postview {
     border: white 5px solid;
-    border-radius: 100px;
+    border-radius: 10px;
     background-color: #212121;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+.profile-postview:hover {
+    border: white 6px solid;
+    cursor: pointer;
 }
 
 .postview {
@@ -30,3 +37,7 @@
     align-items: center;
     justify-content: center;
 }
+
+
+
+
