--- a/src/index.css
+++ b/src/index.css
@@ -468,10 +468,10 @@ ul .menu-ul-list li {
   width: 100%;
   margin-bottom: 10px;
   background: #ffffff;
-  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.3);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 5px;
-  border-radius: 10px;
   transition: all 0.3s;
+  border-radius: 5px;
   overflow: scroll;
 }
 
@@ -687,6 +687,14 @@ p {
   background-color: #00587a;
   color: white;
 
+}
+
+.no-data-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ 
 }
 
 /*---------------------------MEDIA QUERY FOR 1221 PX-----------------------------------------*/
